[project]
name = "roadmark"
version = "0.1.0"
description = "Generate attractive Now/Next/Later roadmaps from markdown files"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "python-frontmatter>=1.0",
    "mistune>=3.0",
    "jinja2>=3.0",
    "pydantic>=2.0",
    "minify-html>=0.15",
    "httpx>=0.27",
]

[project.scripts]
roadmark = "roadmark.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "commitizen>=4.0",
    "pre-commit>=4.0",
    "mypy>=1.15",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["roadmark"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=roadmark --cov-report=term-missing"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = ["pyproject.toml:version"]
tag_format = "v$version"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
